# fortran_cmake

hello/: CMakeLists.txt  hello.f90
unit_test/: CMakeLists.txt
unit_test/src/: hello_module.f90
unit_test/src/test/: CMakeLists.txt
unit_test/src/test/test_hello1/: test_hello1.f90
unit_test/src/test/test_hello2/: test_hello2.f90
